# eagle

./: .gitignore  README.md  gen_test_coverage.sh  meson.build
.github/workflows/: build.yml
examples/: benchmark.cc  main.cc
include/: app.hpp  common.hpp  connection.hpp  dispatcher.hpp  eagle.hpp  handler.hpp  handler_registry.hpp  params.hpp  request.hpp  request_arguments.hpp  resource_matcher.hpp  response.hpp
src/: app.hpp  common.hpp  connection.hpp  dispatcher.hpp  eagle.cc  handler.hpp  handler_registry.cc  main.cc  request_arguments.cc  resource_matcher.cc
tests/: dispatcher_test.cc  handler_registry_test.cc  handler_test.cc  main_test.cc  params_test.cc  request_arguments_test.cc  resource_matcher_test.cc  response_test.cc  test_utils.hpp
